add next and previous label function

--- a/resources/strings/strings.properties
+++ b/resources/strings/strings.properties
@@ -27,6 +27,10 @@ resetAll=Reset All
 resetAllDetail=Reset All
 boxLineColor=Box Line Color
 boxLineColorDetail=Choose Box line color
+nextLabel=Next Label
+nextLabelDetail=Select next label
+prevLabel=Prev Label
+prevLabelDetail=Select previous label
 crtBox=Create RectBox
 crtBoxDetail=Draw a new box
 delBox=Delete RectBox
